gcc/testsuite/rust/rustc/ui/bad/bad-crate-name.rs
extern crate krate-name-here;
// { dg-error ".E0463." "" { target *-*-* } .-1 }
// { dg-error ".E0463." "" { target *-*-* } .-2 }

fn main() {}

